# semantic-abi

./: .gitignore  LICENSE  README.md
python/: README.md  pyproject.toml
python/semanticabi/: BlockFetcher.py  SemanticTransformer.py  TransformBlock.py
python/semanticabi/abi/: Abi.py  Decoded.py  InvalidAbiException.py  SemanticAbi.py
python/semanticabi/abi/decoded/: TokenTransferDecoded.py
python/semanticabi/abi/item/: AbiItem.py  DataType.py  Explode.py  Expressions.py  ItemType.py  Matches.py  Parameter.py  SemanticAbiItem.py  SemanticParameter.py
python/semanticabi/common/: ObjectMetadata.py  TransformException.py  ValueConverter.py
python/semanticabi/common/column/: BooleanDatasetColumn.py  DatasetColumn.py  DatasetColumnTransform.py  HexNormalize.py  HexToFloat.py  HexToInt.py  NumericDatasetColumn.py  RenamedColumn.py  StringDatasetColumn.py  TimestampDatasetColumn.py  ToString.py
python/semanticabi/metadata/: ErigonTraces.py  EthBlock.py  EthBlockJson.py  EthLog.py  EthReceipt.py  EthTokenType.py  EthTraces.py  EthTransaction.py  EthTransferType.py  EthTransferable.py  EvmChain.py  GethTraces.py
python/semanticabi/steps/: AbiSchema.py  DefaultColumnsStep.py  ExplodeIndexStep.py  ExplodeStep.py  ExpressionListStep.py  FlattenParametersStep.py  FlattenedParameter.py  InitStep.py  MatchStep.py  ParameterFlattener.py  Step.py  SubsequentStep.py  TokenTransferStep.py  TransformErrorStep.py
python/test/: test_SemanticTransformer.py
python/test/abi/: test_SemanticAbi.py
python/test/metadata/: test_ErigonTraces.py  test_GethTraces.py
(+157 files in other folders)
