[tool.poetry]
name = "semantic-abi"
version = "0.1.0"
description = ""
authors = ["Zuye Zheng <zuye@hyperarc.com>", "Garrett Kiel <garrett@hyperarc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^11.0.0"
antlr4-python3-runtime = "^4.13.1"
importlib-resources = "^6.0.1"
web3 = "^6.0.0"
eth-abi = "^4.0.0"
pycryptodome = "^3.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"